# mfemtrace

./: CMakeLists.txt  README.md
meshes/: cube.geo  cube.msh  tree.geo
src/: mixed_darcy.cpp  poisson.cpp  poisson_amg.cpp
